2002-03-10  Seth Nickell  <snickell@stanford.edu>

        Make the settings daemon a singleton BonoboObject so capplets
	can detect whether its running and activate it if its not.
	
	* Makefile.am:
	* factory.c: (main):
	* gnome-settings-daemon.c: (awake_impl), (finalize),
	(gnome_settings_daemon_class_init), (gnome_settings_daemon_init),
	(gnome_settings_daemon_new):
	* gnome-settings-daemon.h:

	Convert the settings-daemon into a BonoboObject and add code to
	register it with bonobo-activation. Still has a main loop that can
	be run normally to launch the settings daemon.
	
2002-03-06  Miles Lane  <miles@megapathdsl.net>

	* gnome-settings-daemon.c -- Correct the gnome_program_init()
	  call to specify the correct program name.  Specify the
	  restart command, so that the session manager knows how
	  to restart the daemon if it is killed for any reason.

2002-03-04  Anders Carlsson  <andersca@gnu.org>

	* Makefile.am:
	* gnome-settings-daemon.c: (main):
	* gnome-settings-wm.c: (set_number_of_workspaces),
	(set_workspace_names), (wm_callback), (gnome_settings_wm_init),
	(gnome_settings_wm_load):
	* gnome-settings-wm.h:
	Add support for bridging WM settings, currently supports
	_NET_NUMBER_OF_DESKTOPS and _NET_DESKTOP_NAMES.
	
Tue Feb 19 23:53:06 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-settings-font.c: set the font path and handle cursors.

2002-02-13  Lauris Kaplinski  <lauris@ximian.com>

	* gnome-settings-xsettings.c: #include <string.h> to kill warning

Tue Feb 12 01:34:19 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-settings-daemon.c (main): add session management.

2002-02-10  Richard Hestilow  <hestilow@ximian.com>

	* gnome-settings-xsettings.c: Added font setting.

2002-02-04  Lauris Kaplinski  <lauris@ximian.com>

	* gnome-settings-locate-pointer.c (locate_pointer_expose): Return
	FALSE on default case, instead of nothing
	(setup_window): Replace deprecated methods

	* gnome-settings-sound.c (reload_foreach_cb): Replace deprecated