@@ -1,5 +1,11 @@
 2002-03-10  Seth Nickell  <snickell@stanford.edu>
 
+	* GNOME_SettingsDaemon.server.in:
+
+	Dum de dum. Forgot to cvs add.
+
+2002-03-10  Seth Nickell  <snickell@stanford.edu>
+
         Make the settings daemon a singleton BonoboObject so capplets
 	can detect whether its running and activate it if its not.
 	
